<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.solace.spring.boot</groupId>
        <artifactId>solace-spring-boot-build</artifactId>
        <version>2.0.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>solace-spring-boot-parent</artifactId>
    <version>2.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Solace Spring Boot Parent</name>
    <description>Parent package for Solace Spring Boot</description>
    <url>https://github.com/${repoName}/solace-spring-boot/tree/${project.scm.tag}/solace-spring-boot-parent</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>

        <solace.spring.boot.java-autoconf.version>5.0.1-SNAPSHOT</solace.spring.boot.java-autoconf.version>
        <solace.spring.boot.jms-autoconf.version>5.0.1-SNAPSHOT</solace.spring.boot.jms-autoconf.version>

        <solace.jcsmp.version>10.24.0</solace.jcsmp.version>
        <solace.jms-jakarta.version>10.20.0</solace.jms-jakarta.version>

        <surefire.plugin.version>2.12.4</surefire.plugin.version> <!-- Can upgrade after updating tests to JUnit 5 -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--
			Workaround for CVE-2021-45046
			Remove after upgrading to Spring Boot >= 2.6.3
			 -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>2.19.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- Import Spring Boot dependency management -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.solace.spring.boot</groupId>
                <artifactId>solace-java-spring-boot-autoconfigure</artifactId>
                <version>${solace.spring.boot.java-autoconf.version}</version>
            </dependency>

            <dependency>
                <groupId>com.solace.spring.boot</groupId>
                <artifactId>solace-jms-spring-boot-autoconfigure</artifactId>
                <version>${solace.spring.boot.jms-autoconf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.plugin.version}</version>
                    <configuration>
                        <argLine>
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>